ci(pack): explicitely describe, what should go into the package
Signed-off-by: André Jaenisch <andre.jaenisch@posteo.de>

--- a/package.json
+++ b/package.json
@@ -21,6 +21,15 @@
     "filter",
     "npm downloads"
   ],
+  "files": [
+    "src/",
+    "test/",
+    "README.md",
+    "DCO.txt",
+    "LICENSE",
+    "package.json",
+    "index.js"
+  ],
   "author": "André Jaenisch",
   "license": "MIT",
   "bugs": {
