--- a/package.json
+++ b/package.json
@@ -1,17 +1,17 @@
 {
   "name": "eleventy-filter-npm-package-downloads",
-  "version": "0.1.4",
+  "version": "0.2.0",
   "description": "Filter for 11ty to show the number of downloads of a npm package.",
   "main": "index.js",
   "scripts": {
-    "codecov": "codecov -t $CODECOV_TOKEN",
+    "prepare": "npm run snyk-protect",
     "snyk": "snyk test",
+    "snyk-protect": "snyk protect",
     "test": "npm run test:ci",
     "test:ci": "nyc ava --tap | tap-xunit > coverage/junit.xml",
-    "test:coverage": "nyc ava",
-    "snyk-protect": "snyk protect",
-    "prepare": "npm run snyk-protect"
+    "test:coverage": "nyc ava"
   },
+	"type": "module",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/Ryuno-Ki/eleventy-filter-npm-package-downloads.git"
@@ -41,14 +41,13 @@
     "@11ty/eleventy": ">=0.8.x"
   },
   "dependencies": {
-    "axios": "0.19.0",
-    "snyk": "1.245.0"
+    "axios": "^0.27.2",
+    "snyk": "^1.954.0"
   },
   "devDependencies": {
-    "ava": "2.3.0",
-    "codecov": "3.6.0",
-    "nyc": "14.1.1",
-    "tap-xunit": "2.4.0"
+    "ava": "^4.3.0",
+    "nyc": "^15.1.0",
+    "tap-xunit": "^2.4.1"
   },
   "snyk": true
 }
